--- a/33/indesx.html
+++ b/33/indesx.html
@@ -129,11 +129,13 @@
     <div class="container px-5 my-5">
         <h3> our Feature</h3>
         <div class="row mt-5">
-            <div class="col-lg-6">
+            <div class="col-lg-3">
 
-                <div class="card" >
-                    <img src="ss/2.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
+                <div class="Feature-card card shadow" >
+                   <div class="overflow-hidden">
+                    <img src="ss/2.jpg" class="course-img card-img-top" alt="...">
+                   </div>
+                    <div class="card-body shadow">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -142,11 +144,13 @@
                 </div>
 
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-3">
 
-                <div class="card" >
-                    <img src="ss/3.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
+                <div class="Feature-card card shadow" >
+                    <div class="overflow-hidden">
+                        <img src="ss/3.jpg" class=" course-img card-img-top" alt="...">
+                    </div>
+                    <div class="card-body shadow">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -155,7 +159,36 @@
                 </div>
 
             </div>
+            <div class="col-lg-3">
 
+                <div class="Feature-card card shadow" >
+                    <div class="overflow-hidden">
+                        <img src="ss/6.jpg" class="course-img card-img-top" alt="...">
+                    </div>
+                    <div class="card-body shadow">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-3">
+
+                <div class="Feature-card card shadow" >
+                    <div class="overflow-hidden">
+                        <img src="ss/4.jpg" class="course-img card-img-top" alt="...">
+                    </div>
+                    <div class="card-body shadow">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+
+            </div>
 
 
         </div>
